2007-05-06  Roger Leigh  <rleigh@whinlatter.ukfsn.org>

	* sbuild/sbuild-basic-keyfile.tcc: Remove using keywords from
	global scope, because this is included by sbuild-basic-keyfile.h.
	All type names now use explicit namespace qualifiers.

2007-05-05  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-keyfile.h: Remove keyfile class.  Replace with a
	simple traits structure, keyfile_traits, and a keyfile typedef to
	specialise basic_keyfile.

	* sbuild/sbuild-basic-keyfile.(h|tcc): Copy of
	sbuild-keyfile.(h|cc), converted into a templated class with
	traits.

	* sbuild/sbuild-keyfile-base.(cc|h): Copy of
	sbuild-keyfile.(h|cc), with all but error codes and priority enum
	removed.

2007-05-05  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-keyfile.(cc|h): Remove code moved into
	sbuild_keyfile_base, and inherit from sbuild_keyfile_base.

	* sbuild/Makefile.am (sbuild_public_cc_sources,
	(sbuild_public_h_sources): Include sbuild/sbuild-keyfile.(cc|h).

2007-05-05  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-keyfile.(cc|h): Add typedefs for key, group and
	comment types.

2007-05-05  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: debian/rules: Split arch-dependendent and
	arch-independent packages into seprate rules.  Remove .map and
	.md5 files from the Doxygen docs.

2007-05-04  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Add new package, libsbuild-doc.

2007-05-04  Roger Leigh  <rleigh@debian.org>

	* configure.ac: Generate doc/sbuild.dox.

	* doc/Makefile.am: Generate sbuild documentation.  Fix PS_DEPS for
	new manual page locations.

	* doc/schroot.dox.in: Remove sbuild input files, and use sbuild
	tag file.

	* doc/sbuild.dox.in: Split libsbuild API reference from
	schroot.dox.in.

2007-05-04  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Fix issues in debian/control.

2007-05-02  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Remove libsbuild1 dependency from
	libsbuild-dev.
